Fixed bug with focus on buttons in header and deleted filter drop shadow on mobile menu.

--- a/src/sass/components/_buttons-header.scss
+++ b/src/sass/components/_buttons-header.scss
@@ -12,6 +12,7 @@
   line-height: 1.25;
   background-color: var(--color-header);
   padding-inline: 14px;
+  padding-block: 7px;
   cursor: pointer;
   transition: background-color 250ms;
 
